--- a/css/style.css
+++ b/css/style.css
@@ -767,4 +767,13 @@ p, li {
   margin: 0 auto;
   width: 60%; }
 
+.wrapper {
+  background: url("../img/tri1.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+  width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
