--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -519,3 +519,13 @@ p, li{
 	width: 60%;
 }
 
+.wrapper{
+	
+	background: url('../img/tri1.jpg') no-repeat center center; 
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+	background-size: cover;
+	height: 100vh;
+	width: 100%;
+}
