--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,15 @@ th {
 /********************************************************************************/
 /***************************** GENERAL ******************************************/
 /********************************************************************************/
+body {
+  background: url("../img/fog4.png") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+  width: 100%; }
+
 h1 {
   text-transform: uppercase;
   text-align: center;
@@ -375,9 +384,11 @@ p, li {
 /********************************* MENU *****************************************/
 /********************************************************************************/
 #menu {
-  width: 100%;
-  text-align: center; }
+  margin-top: 2%;
+  text-align: center;
+  width: 100%; }
   #menu .logo {
+    padding-bottom: 2%;
     padding-top: 2%;
     width: 20%; }
   #menu ul {
@@ -403,9 +414,11 @@ p, li {
 /***************************** STARTPAGE ****************************************/
 /********************************************************************************/
 #slider {
+  color: white;
   display: block;
+  font-size: 2em;
   margin: 0 auto;
-  width: 80%; }
+  width: 60%; }
   #slider .box {
     margin: 0 auto; }
 
@@ -765,14 +778,5 @@ p, li {
 #info-single {
   margin: 0 auto;
   width: 60%; }
-
-body {
-  background: url("../img/fog2.png") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100vh;
-  width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
