--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,6 +1,17 @@
 /********************************************************************************/
 /***************************** GENERAL ******************************************/
 /********************************************************************************/
+body{
+	
+	background: url('../img/fog4.png') no-repeat center center; 
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+	background-size: cover;
+	height: 100vh;
+	width: 100%;
+}
+
 h1{
 	text-transform: uppercase;
 	text-align: center;
@@ -28,9 +39,12 @@ p, li{
 
 
 #menu {
-	width: 100%;
+	margin-top: 2%;
 	text-align: center;
+	width: 100%;
+	
 	.logo {
+		padding-bottom: 2%;
 		padding-top: 2%;
 		width: 20%;
 	}
@@ -65,9 +79,11 @@ p, li{
 /********************************************************************************/
 
 #slider {
+	color: white;
 	display: block;
+	font-size: 2em;
 	margin: 0 auto;
-	width: 80%;
+	width: 60%;
 	//border: 1px solid black;
 	.box {
 		margin: 0 auto;
@@ -519,13 +535,3 @@ p, li{
 	width: 60%;
 }
 
-body{
-	
-	background: url('../img/fog2.png') no-repeat center center; 
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-	background-size: cover;
-	height: 100vh;
-	width: 100%;
-}
