--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100vh;
+  height: 120vh;
   width: 100%; }
 
 h1 {
@@ -414,13 +414,15 @@ p, li {
 /***************************** STARTPAGE ****************************************/
 /********************************************************************************/
 #slider {
+  background-color: rgba(0, 0, 0, 0.2);
   color: white;
   display: block;
   font-size: 2em;
+  height: 500px;
   margin: 0 auto;
-  width: 60%; }
-  #slider .box {
-    margin: 0 auto; }
+  margin-top: 30px;
+  text-align: center;
+  width: 70%; }
 
 #left, #middle, #right {
   display: inline-block;
@@ -430,7 +432,7 @@ p, li {
 #middle {
   text-align: center;
   white-space: nowrap;
-  height: 600px;
+  height: 500px;
   width: 800px; }
 
 #viewer {
@@ -441,9 +443,7 @@ p, li {
   transform: translateY(-50%); }
 
 #btn_left, #btn_right {
-  height: 90px;
-  margin: 0 10px;
-  width: 40px; }
+  margin: 0 10px; }
 
 /********************************* CATEGORY BAR*****************************************/
 .shop-title a {
