--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -8,7 +8,7 @@ body{
 		-moz-background-size: cover;
 		-o-background-size: cover;
 	background-size: cover;
-	height: 120vh;
+	height: 100%;
 	width: 100%;
 }
 
@@ -358,8 +358,9 @@ p, li{
 /********************************************************************************/
 
 #info-wrapper{
+	background-color: rgba(0,0,0,.2);
 	margin: 0 auto;
-	padding-top: 50px;
+	padding-top: 30px;
 	width: 80%;
 	.cell-text {
 		background-color: rgba(250, 250, 250, .6);
@@ -391,7 +392,7 @@ p, li{
 	    top:-110%;
 	    left:10%;
 	    right:10%;
-	    background-color:#fff;
+	    background-color: white;
 	    color:#7F7F7F;
 	    padding:20px;
 	    border:2px solid #ccc;
@@ -415,7 +416,11 @@ p, li{
 		h1{
 		    margin: -20px -20px 0px -20px;
 		    padding: 10px;
-		    background-color: #355515;
+		    background: url('../img/fog2.png') no-repeat center center; 
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+			background-size: cover;
 		    color: white;
 		    -moz-border-radius: 20px 20px 0px 0px;
 		    -webkit-border-top-left-radius: 20px;
